public class Cliente {
    private String nombre;
    private String correo;
    private String direccion;
    public void Cliente() {
        // TODO: Implementar el metodo
    }
    public void Cliente(String nombre, String correo, String direccion) {
        // TODO: Implementar el metodo
    }
    public String getNombre() {
        // TODO: Implementar el metodo
    }
    public void setNombre(String nombre) {
        // TODO: Implementar el metodo
    }
    public String getCorreo() {
        // TODO: Implementar el metodo
    }
    public void setCorreo(String correo) {
        // TODO: Implementar el metodo
    }
    public String getDireccion() {
        // TODO: Implementar el metodo
    }
    public void setDireccion(String direccion) {
        // TODO: Implementar el metodo
    }
    public String toString() {
        // TODO: Implementar el metodo
    }
}
